# BlueWii

./: Cargo.toml
.github/workflows/: main.yml
src/: lib_input.rs  main.rs  udev_device_extensions.rs  utils.rs  wii_remote.rs
