[package]
name = "BlueWii"
authors = ["Lunar Starstrum <lunar@forsaken-borders.net>"]
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.26"
env_logger = "0.11.6"
anyhow = "1.0.97"
chrono = "0.4.40"
input-sys = "1.18.0"
libudev-sys = "0.1.4"

[dependencies.clap]
version = "4.5.31"
features = ["cargo"]
